# food-forest

./: pyproject.toml
docs/plans/: 2026-03-12-forest-cli-test-plan.md  2026-03-12-forest-cli.md  2026-03-13-web-search-test-plan.md  2026-03-13-web-search.md
src/forest_cli/: cli.py  db.py  web_search.py
src/forest_cli/data/: seed.sql
tests/: conftest.py  test_cli.py  test_db.py  test_live.py  test_web_search.py
