[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forest-cli"
version = "0.1.0"
description = "Find local Sarasota suppliers for your food forest"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1,<8.2",
    "rich>=13.0",
]

[project.scripts]
forest = "forest_cli.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/forest_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/test_live.py"
